--- a/Atividade1/index.html
+++ b/Atividade1/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Jorge A. Gomes">
+    <title>Editores para Desenvolvimento Front-End</title>
+    <link href="main.css" rel="stylesheet">
+</head>
 
+<body>
+    <h1>Editores para Desenvolvimento Front-End<br><small>Atividade de Pesquisa, 19 de Fevereiro de 2020</small></h1>
+    <h3>Resumo</h3>
+    <h3>Sumário</h3>
+    <h3>Introdução</h3>
+    
+    <p id="ref_1_dst">Editores de código são provavelmente as ferramentas mais importantes para desenvolvedores web. Encontrar uma ferramenta que melhor se adeque ao <em>workflow</em> e aos objetivos, e que tenha todas as características necessárias pode resultar em uma enorme economia de tempo e melhorar significativamente a qualidade do seu código.
+    Neste trabalho, serão mostrados os melhores editores de código para desenvolvedores web. Todos possuem versões para os três maiores sistemas operacionais, Windows, Linux e OS X.<sup><a href="./index.html#ref_1_src">[1]</a></sup>
+    </p>
+    
+    <h3>VS Code</h3>
+    <h3>Brackets</h3>
+    <h3>Atom</h3>
+    <h3>Sublime Text</h3>
+    <h3>Conclusão</h3>
+    <h3>Referências</h3>
+        <ol>
+            <dd id="ref_1_src"><a href="./index.html#ref_1_dst">1</a>. Adaptado de <em>&lt;https://www.developerdrive.com/5-best-cross-platform-code-editors-for-web-developers/&gt;</em> (acessado em 19/02/2020)</dd>
+        </ol>
+</body>
+</html>
